# rust-chat-server

./: .gitignore  Cargo.toml  README.md  chat.db  chat_database.sql
src/: encryption.rs
