[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 ="0.5.3"
axum = {version="0.8.6", features=["macros"]}
sqlx = {version="0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"]}
tokio = { version = "1.48.0", features = ["full"] }
serde = "1.0.228"
dotenv = "0.15.0"
axum-extra = {version="0.12.1", features = ["query"]}
chrono = "0.4.42"
rsa = "0.9"
rand = "0.8"
sha2 = "0.10"
serde_json = "1.0"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
dialoguer = "0.11"
